/api/recorded で TS を必ず含むようにすると、ビデオファイルのエンコード済みのものが取得できない問題を修正
